--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
